# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml
reviews_api_app/: apps.py  models.py  permissions.py  serializer.py  urls.py  views.py
reviews_api_app/migrations/: 0001_initial.py
reviews_project/: asgi.py  settings.py  urls.py  wsgi.py
