[tool.poetry]
name = "drf-auth"
version = "0.1.0"
description = ""
authors = ["layanabushaweesh <layanabushaweesh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
djangorestframework-simplejwt = "^4.7.2"
whitenoise = "^5.3.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
